--- a/cases/plan/error_unsupport_sql.yaml
+++ b/cases/plan/error_unsupport_sql.yaml
@@ -13,13 +13,30 @@
 # limitations under the License.
 
 cases:
-  - id: 0
-    desc: resolve请求主表失败
-    mode: batch-unsupport
-    sql: |
-      select col1, col2 from t1 union all select c1 + c2 as col1, col2 from t2;
   - id: 1
-    desc: resolve请求主表失败
-    mode: batch-unsupport
+    desc: 不支持PIVOT
     sql: |
-      select col1, col2 from t1 left join (select col1+col2 as add12 from tt) as t2 on t1.col1 = t2.col1;
+      SELECT * FROM t PIVOT(a FOR b IN (x));
+  - id: 2
+    desc: 不支持UNPIVOT
+    sql: |
+      SELECT * FROM t UNPIVOT(a FOR b IN (x));
+  - id: 3
+    desc: 不支持FOR SYSTEM_TIME
+    sql: |
+      SELECT
+        *
+      FROM
+        t FOR SYSTEM_TIME AS OF TIMESTAMP('2011-01-01 12:20:20')
+  - id: 4
+    desc: 不支持WITH OFFSET
+    sql: |
+      SELECT
+        *
+      FROM
+        t1 WITH OFFSET AS offset,
+        t2 WITH OFFSET AS offset
+  - id: 5
+    desc: 不支持TABLESAMPLE
+    sql: |
+      select uId from Users TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
