--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -5,18 +5,42 @@
     <parent>
         <artifactId>fedb-sdk</artifactId>
         <groupId>com.4paradigm.hybridsql</groupId>
-            <version>2.2.0-SNAPSHOT</version>
+            <version>2.2.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fedb-native</artifactId>
     <packaging>jar</packaging>
     <name>fedb-native</name>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>${versionFromProfile}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <versionFromProfile>${project.version.base}${project.version.suffix}</versionFromProfile>
+            </properties>
+        </profile>
+        <profile>
+            <id>macos</id>
+            <properties>
+                <versionFromProfile>${project.version.base}-macos${project.version.suffix}</versionFromProfile>
+            </properties>
+        </profile>
+        <profile>
+            <id>allinone</id>
+            <properties>
+                <versionFromProfile>${project.version.base}-allinone${project.version.suffix}</versionFromProfile>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
        <dependency>
